tests/snapshots/compile_integration_tests__simple_migrations__compile_create_simple_table.snap
---
source: tests/compile_integration_tests.rs
expression: summary
---
migration_id: 084bf187182f5f38098720de4b64e0790109d1b1cf0aa8b9402b50f470204fc0
description: Create users table
statement_count: 1
has_breaking_changes: false
has_destructive_changes: false
source_hash: e493b8e476cf554f
target_hash: 753cb56e3438d7fe
breaking_changes: []
sql_statements:
  - description: Create table public.users
    sql: "CREATE TABLE public.users (\n    id integer NOT NULL,\n    name text,\n    email text\n)"
